# pv-matter

./: .gitignore  CLAUDE.md  Cargo.toml  README-chip-tool.md  README.md
.github/workflows/: ci.yml
docs/: architecture.md  mqtt-contract.md
packaging/: .gitignore  Dockerfile  Dockerfile.dockerignore  INSTALL.md  README.md  build-aarch64.sh  config.env.example  install.sh  pv-matter-run  pv-matter.service
src/: config.rs  domain.rs  ingest.rs  main.rs  senml.rs
src/matter/: bridge.rs  desc_tags.rs  eem.rs  epm.rs  mod.rs  node.rs  power_source.rs  power_topology.rs  temperature.rs
